# deskbreak

./: .gitignore  README.md  pyproject.toml
deskbreak/: __init__.py  __main__.py  cli.py  daemon.py  launchd.py  notifier.py  state.py
