[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deskbreak"
version = "0.1.0"
description = "macOS desk-break reminder daemon with escalating alerts and an adherence log"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "deskbreak" }]
classifiers = [
    "Environment :: Console",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.scripts]
deskbreak = "deskbreak.cli:main"

[tool.setuptools.packages.find]
include = ["deskbreak*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
